# cwaibot

./: Dockerfile  config.py  main.py  pyproject.toml
app/: config.py  main.py
app/langgraph_agent/graph/: builder.py  sys_prompt.py
app/langgraph_agent/tools/: drivers_tools.py
app/services/: api_client.py
backend/: .env.example  package.json
backend/src/: server.ts
backend/src/controllers/: auth.controller.ts  note.controller.ts
backend/src/middleware/: auth.middleware.ts  error.middleware.ts
backend/src/models/: Note.model.ts  User.model.ts
backend/src/routes/: auth.routes.ts  note.routes.ts
backend/src/services/: email.service.ts
langgraph_agent/graph/: builder.py  faq.py  nodes.py  sys_prompt.py
langgraph_agent/tools/: drivers_tools.py
models/: api_models.py  driver_model.py  state_model.py  tool_args_model.py
services/: api_client.py  redis_service.py
